kubernetes/apps/apps/immich/immich/app/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name immich-server
  labels:
    app: *name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: *name
  template:
    metadata:
      labels:
        app: *name
    spec:
      containers:
      - name: immich-server
        image: harbor.cloud.traunseenet.com/ghcr.io/immich-app/immich-server:v3.1.0@sha256:b434cb9287eea1471c9974845914d4dd328c9c2d652e446ed4930f99944f0ceb
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2283
          name: http
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/server/ping
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/server/ping
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /api/server/ping
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /usr/src/app/upload
          name: library
          subPath: immich
        - mountPath: /data/photos
          name: library
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: library
        persistentVolumeClaim:
            claimName: immich-photos
---
apiVersion: v1
kind: Service
metadata:
  name: &name immich-server
  labels:
    app: *name
spec:
  ports:
  - name: http
    port: 2283
    protocol: TCP
    targetPort: http
  selector:
    app: immich-server
  type: ClusterIP
